Permissions are ready for admin panel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+cloudinary.cloud_name=dxdlpbpdh
+cloudinary.api_key=923219331681892
+cloudinary.api_secret=qiZfaBoE9om0Mqv-J7csSdsLkFg
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
