--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ cloudinary.api_key=923219331681892
 cloudinary.api_secret=qiZfaBoE9om0Mqv-J7csSdsLkFg
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
