--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=fusiontech
+spring.application.name=Fusiontech MVC
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/fusiontech
 spring.datasource.username=postgres
