--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Fusiontech MVC
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/fusiontech
+spring.datasource.url=jdbc:postgresql://localhost:5432/fusiontech-mvc
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.datasource.driverClassName=org.postgresql.Driver
